[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/SceneManager.gd" type="Script" id=2]
[ext_resource path="res://scenes/TransitionScreen.tscn" type="PackedScene" id=3]

[node name="SceneManager" type="Node2D"]
script = ExtResource( 2 )

[node name="CurrentScene" type="Node" parent="."]

[node name="Menu" parent="CurrentScene" instance=ExtResource( 1 )]

[node name="TransitionScreen" parent="." instance=ExtResource( 3 )]

[node name="ColorRect" parent="TransitionScreen" index="0"]
color = Color( 0, 0, 0, 0 )
[connection signal="pressed_start" from="CurrentScene/Menu" to="." method="_on_Menu_pressed_start"]
[connection signal="can_transition" from="TransitionScreen" to="." method="_on_TransitionScreen_can_transition"]

[editable path="TransitionScreen"]
